--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://cdn.discordapp.com/icons/1049040708222328852/d4061748522337f6a8bbb9a22b8b3bbf.png?size=4096"
+    />
+    type="image/x-icon" />
   </head>
   <body>
     <div class="menubar">
@@ -28,7 +33,7 @@
           <a href="#mecze"><b>MECZE</b></a>
         </li>
         <li>
-          <a href="#"><b>VAR</b></a>
+          <a href="#var"><b>VAR</b></a>
         </li>
         <li>
           <a href="#"><b>PARTNERZY</b></a>
@@ -56,7 +61,7 @@
       <a class="my-button" href="">ZAKOŃCZONY</a>
     </div>
 
-    <div class="info">
+    <div class="info" id="var">
       <h1>VAR</h1>
       <h3>VAR team będący na wszystkich meczach!</h3>
     </div>
