--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         src="https://cdn.discordapp.com/avatars/991282953961349160/2ab2fb7752931a96dc9befd8b007bba3.png?size=4096"
         alt="Profilowe"
       />
-      <h1>Soniq</h1>
+      <h1>Simciu</h1>
       <h3>Sędzia</h3>
       <h3>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam est ut
