--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       rel="shortcut icon"
       href="https://cdn.discordapp.com/icons/1049040708222328852/d4061748522337f6a8bbb9a22b8b3bbf.png?size=4096"
     />
-    type="image/x-icon" />
   </head>
   <body>
     <div class="menubar">
@@ -97,12 +96,39 @@
         src="https://cdn.discordapp.com/avatars/991282953961349160/2ab2fb7752931a96dc9befd8b007bba3.png?size=4096"
         alt="Profilowe"
       />
-      <h1>Simciu</h1>
+      <h1>Soniq</h1>
       <h3>Sędzia</h3>
       <h3>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam est ut
         possimus ipsam assumenda neque fuga
       </h3>
+    </div>
+
+    <div class="osoba">
+      <img
+        src="https://cdn.discordapp.com/avatars/865177226596319253/4de98a651323f7fcb64fdfd6c1a0423d.png?size=4096"
+        alt="Profilowe"
+      />
+      <h1>Słonik</h1>
+      <h3>Sędzia</h3>
+      <h3>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam est ut
+        possimus ipsam assumenda neque fuga
+      </h3>
+    </div>
+
+    <div class="info">
+      <h1>Nasi partnerzy</h1>
+      <h3>Partnerzy którzy nas promują</h3>
+    </div>
+
+    <div class="partnerzy">
+      <img
+        src="https://cdn.discordapp.com/icons/922427751166787645/82ff7caf47874c3e2ea4ed5f6b39c59b.png?size=4096"
+        alt="logo ursynowa"
+      />
+      <h1>vZTM Ursynów</h1>
+      <a href="https://discord.gg/8bttSVJdVV" target="_blank">Dołącz do nas!</a>
     </div>
 
     <script
