--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
       rel="shortcut icon"
       href="https://cdn.discordapp.com/icons/1049040708222328852/d4061748522337f6a8bbb9a22b8b3bbf.png?size=4096"
     />
+    <meta
+      name="description"
+      content="Oficjalna strona MKM's FIFA World Cup odbywająca się w Warszawie"
+    />
+    <meta name="keywords" content="MKM FIFA, fifa mkm, MKM mecz, Mecz" />
+    <meta name="theme-color" content="#9b0b35" />
+    <meta property="og:url" content="https://simciutoja.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="MKM's Fifa World Cup" />
+    <meta
+      property="og:description"
+      content="OOficjalna strona MKM's FIFA World Cup odbywająca się w Warszawie"
+    />
+    <meta
+      property="og:image"
+      content="https://cdn.discordapp.com/icons/1049040708222328852/d4061748522337f6a8bbb9a22b8b3bbf.png?size=4096"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="menubar">
