--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:title" content="MKM's Fifa World Cup" />
     <meta
       property="og:description"
-      content="OOficjalna strona MKM's FIFA World Cup odbywająca się w Warszawie"
+      content="Oficjalna strona MKM's FIFA World Cup odbywająca się w Warszawie"
     />
     <meta
       property="og:image"
