--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:title" content="MKM's Fifa World Cup" />
     <meta
       property="og:description"
-      content="Oficjalna strona MKM's FIFA World Cup odbywająca się w Warszawie"
+      content="OOficjalna strona MKM's FIFA World Cup odbywająca się w Warszawie"
     />
     <meta
       property="og:image"
@@ -53,7 +53,7 @@
           <a href="#var"><b>VAR</b></a>
         </li>
         <li>
-          <a href="#"><b>PARTNERZY</b></a>
+          <a href="#partnerzy"><b>PARTNERZY</b></a>
         </li>
       </ul>
     </div>
@@ -75,7 +75,7 @@
       <h3>15:00 - 16:30</h3>
       <h5>Park Magiczny</h5>
       <h5>2 - 5</h5>
-      <a class="my-button" href="">ZAKOŃCZONY</a>
+      <a class="my-button" href="katar.html">ZAKOŃCZONY</a>
     </div>
 
     <div class="info" id="var">
@@ -140,7 +140,7 @@
       <h3>Partnerzy którzy nas promują</h3>
     </div>
 
-    <div class="partnerzy">
+    <div class="partnerzy" id="partnerzy">
       <img
         src="https://cdn.discordapp.com/icons/922427751166787645/82ff7caf47874c3e2ea4ed5f6b39c59b.png?size=4096"
         alt="logo ursynowa"
