--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <h3>15:00 - 16:30</h3>
       <h5>Park Magiczny</h5>
       <h5>2 - 5</h5>
-      <a class="my-button" href="katar.html">ZAKOŃCZONY</a>
+      <a class="my-button" href="/katar">ZAKOŃCZONY</a>
     </div>
 
     <div class="info" id="var">
