--- a/katar.html
+++ b/katar.html
@@ -44,16 +44,16 @@
     <div class="menubar">
       <ul>
         <li>
-          <a href="#"><b>HOME</b></a>
+          <a href="/index"><b>HOME</b></a>
         </li>
         <li>
-          <a href="#mecze"><b>MECZE</b></a>
+          <a href="/index"><b>MECZE</b></a>
         </li>
         <li>
-          <a href="#var"><b>VAR</b></a>
+          <a href="/index"><b>VAR</b></a>
         </li>
         <li>
-          <a href="#"><b>PARTNERZY</b></a>
+          <a href="/index"><b>PARTNERZY</b></a>
         </li>
       </ul>
     </div>
