--- a/katar.html
+++ b/katar.html
@@ -63,7 +63,7 @@
       <h3>15:00 - 16:30</h3>
       <h5>Park Magiczny</h5>
       <h5>2 - 5</h5>
-      <a class="my-button" href="index.html">Powrót do strony głównej</a>
+      <a class="my-button" href="/index">Powrót do strony głównej</a>
     </div>
 
     <div class="aktualny">
