--- a/katar.html
+++ b/katar.html
@@ -85,6 +85,23 @@
     </div>
 
     <div class="info" id="var">
+      <h1>Kartki wystawione</h1>
+      <h3>Katar - 🟨 🟨 🟥</h3>
+      <br />
+      <h3>Ekwador - 🟨 🟨 🟨</h3>
+    </div>
+
+    <div class="info" id="var">
+      <h1>Statystyki meczu</h1>
+      <h3>Na ten moment niestety nie możemy podać takich informacji!</h3>
+    </div>
+
+    <div class="info" id="var">
+      <h1>Składy</h1>
+      <h3>Na ten moment niestety nie możemy podać takich informacji!</h3>
+    </div>
+
+    <div class="info" id="var">
       <h1>Osoba opisująca ten mecz</h1>
     </div>
 
