--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       property="og:image"
       content="https://cdn.discordapp.com/icons/1049040708222328852/d4061748522337f6a8bbb9a22b8b3bbf.png?size=4096"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <div class="menubar">
@@ -58,11 +58,11 @@
       </ul>
     </div>
 
-    <div class="info">
+    <div class="info" data-aos="fade-up-left">
       <h1>MECZE</h1>
       <h3>Kolejne mecze będą na bieżąco aktualizowane!</h3>
     </div>
-    <div class="aktualny" id="mecze">
+    <div class="aktualny" id="mecze" data-aos="fade-up-right">
       <h1>HOLANDIA - SENGEAL</h1>
       <h3>15:00 - 16:30</h3>
       <h5>Park Magiczny</h5>
@@ -70,7 +70,7 @@
       <a class="my-button" href="">LIVE STREAM</a>
     </div>
 
-    <div class="aktualny">
+    <div class="aktualny" data-aos="fade-up-left">
       <h1>KATAR - EKWADOR</h1>
       <h3>15:00 - 16:30</h3>
       <h5>Park Magiczny</h5>
@@ -78,12 +78,12 @@
       <a class="my-button" href="/katar">ZAKOŃCZONY</a>
     </div>
 
-    <div class="info" id="var">
+    <div class="info" id="var" data-aos="fade-up-right">
       <h1>VAR</h1>
       <h3>VAR team będący na wszystkich meczach!</h3>
     </div>
 
-    <div class="osoba">
+    <div class="osoba" data-aos="fade-up-left">
       <img
         src="https://cdn.discordapp.com/avatars/694898280630452224/26be932025d65e2899a926154cb4b51f.png?size=4096"
         alt="Profilowe"
@@ -96,7 +96,7 @@
       </h3>
     </div>
 
-    <div class="osoba">
+    <div class="osoba" data-aos="fade-up-right">
       <img
         src="https://cdn.discordapp.com/avatars/814053492384989234/fba61078d3f198229c4c37ca742071fb.png?size=4096"
         alt="Profilowe"
@@ -109,7 +109,7 @@
       </h3>
     </div>
 
-    <div class="osoba">
+    <div class="osoba" data-aos="fade-up-left">
       <img
         src="https://cdn.discordapp.com/avatars/991282953961349160/2ab2fb7752931a96dc9befd8b007bba3.png?size=4096"
         alt="Profilowe"
@@ -122,7 +122,7 @@
       </h3>
     </div>
 
-    <div class="osoba">
+    <div class="osoba" data-aos="fade-up-right">
       <img
         src="https://cdn.discordapp.com/avatars/865177226596319253/4de98a651323f7fcb64fdfd6c1a0423d.png?size=4096"
         alt="Profilowe"
@@ -135,12 +135,12 @@
       </h3>
     </div>
 
-    <div class="info">
+    <div class="info" data-aos="fade-up-left">
       <h1>Nasi partnerzy</h1>
       <h3>Partnerzy którzy nas promują</h3>
     </div>
 
-    <div class="partnerzy" id="partnerzy">
+    <div class="partnerzy" id="partnerzy" data-aos="fade-up-right">
       <img
         src="https://cdn.discordapp.com/icons/922427751166787645/82ff7caf47874c3e2ea4ed5f6b39c59b.png?size=4096"
         alt="logo ursynowa"
@@ -148,11 +148,15 @@
       <h1>vZTM Ursynów</h1>
       <a href="https://discord.gg/8bttSVJdVV" target="_blank">Dołącz do nas!</a>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
