--- a/index.html
+++ b/index.html
@@ -1,177 +1,102 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>MKM's FIFA World Cup</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="shortcut icon"
-      href="https://cdn.discordapp.com/icons/1049040708222328852/d4061748522337f6a8bbb9a22b8b3bbf.png?size=4096"
-    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
+    <script src="https://unpkg.com/gsap@3.11.3/dist/gsap.min.js"></script>
+    <script src="https://unpkg.com/gsap@3.11.3/dist/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/gsap@3.11.3/dist/ScrollToPlugin.min.js"></script>
     <meta
-      name="description"
-      content="Oficjalna strona MKM's FIFA World Cup odbywająca się w Warszawie"
-    />
-    <meta name="keywords" content="MKM FIFA, fifa mkm, MKM mecz, Mecz" />
-    <meta name="theme-color" content="#9b0b35" />
-    <meta property="og:url" content="https://simciutoja.github.io/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="MKM's Fifa World Cup" />
-    <meta
-      property="og:description"
-      content="OOficjalna strona MKM's FIFA World Cup odbywająca się w Warszawie"
-    />
-    <meta
-      property="og:image"
-      content="https://cdn.discordapp.com/icons/1049040708222328852/d4061748522337f6a8bbb9a22b8b3bbf.png?size=4096"
-    />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    name="description"
+    content="Moja oficjalna strona!"
+  />
+  <meta name="theme-color" content="#094b65" />
+  <meta property="og:url" content="https://simciutoja.github.io/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Simciu WebSite" />
+  <meta
+    property="og:description"
+    content="Moja oficjalna strona!"
+  />
   </head>
   <body>
-    <div class="menubar">
-      <ul>
-        <li>
-          <a href="#"><b>HOME</b></a>
-        </li>
-        <li>
-          <a href="#mecze"><b>MECZE</b></a>
-        </li>
-        <li>
-          <a href="#var"><b>VAR</b></a>
-        </li>
-        <li>
-          <a href="#partnerzy"><b>PARTNERZY</b></a>
-        </li>
-      </ul>
-    </div>
+    <header id="header">
+      <a href="#" class="logo">Simciu</a>
+    </header>
 
-    <div class="info" data-aos="fade-up-left">
-      <h1>MECZE</h1>
-      <h3>Kolejne mecze będą na bieżąco aktualizowane!</h3>
-    </div>
-    <div class="aktualny" id="mecze" data-aos="fade-up-right">
-      <h1>HOLANDIA - SENGEAL</h1>
-      <h3>15:00 - 16:30</h3>
-      <h5>Park Magiczny</h5>
-      <h5>0 - 0</h5>
-      <a class="my-button" href="">LIVE STREAM</a>
-    </div>
+    <section>
+      <h2 id="text"><span>To nowy ja,</span><br />Simciu</h2>
 
-    <div class="aktualny" data-aos="fade-up-left">
-      <h1>KATAR - EKWADOR</h1>
-      <h3>15:00 - 16:30</h3>
-      <h5>Park Magiczny</h5>
-      <h5>2 - 5</h5>
-      <a class="my-button" href="/katar">ZAKOŃCZONY</a>
-    </div>
-
-    <div class="info" id="var" data-aos="fade-up-right">
-      <h1>VAR</h1>
-      <h3>VAR team będący na wszystkich meczach!</h3>
-    </div>
-
-    <div class="osoba" data-aos="fade-up-left">
       <img
-        src="https://cdn.discordapp.com/avatars/694898280630452224/26be932025d65e2899a926154cb4b51f.png?size=4096"
-        alt="Profilowe"
+        src="https://drive.google.com/uc?id=1OheESDN1QodxRPvLvRaRRxWcKbn8RW5d"
+        alt="bird1"
+        id="bird1"
       />
-      <h1>Soniq</h1>
-      <h3>Główny sędzia</h3>
-      <h3>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam est ut
-        possimus ipsam assumenda neque fuga
-      </h3>
-    </div>
 
-    <div class="osoba" data-aos="fade-up-right">
       <img
-        src="https://cdn.discordapp.com/avatars/814053492384989234/fba61078d3f198229c4c37ca742071fb.png?size=4096"
-        alt="Profilowe"
+        src="https://drive.google.com/uc?id=1dVB79qyy_ED0uVxzINWL3AtCpMShNmk5"
+        alt="bird2"
+        id="bird2"
       />
-      <h1>Int_vx</h1>
-      <h3>Sędzia</h3>
-      <h3>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam est ut
-        possimus ipsam assumenda neque fuga
-      </h3>
-    </div>
 
-    <div class="osoba" data-aos="fade-up-left">
       <img
-        src="https://cdn.discordapp.com/avatars/991282953961349160/2ab2fb7752931a96dc9befd8b007bba3.png?size=4096"
-        alt="Profilowe"
+        src="https://drive.google.com/uc?id=1h_RvHqxijkZRpaJlL80aXzholwUbDF18"
+        alt="forest"
+        id="forest"
       />
-      <h1>Soniq</h1>
-      <h3>Sędzia</h3>
-      <h3>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam est ut
-        possimus ipsam assumenda neque fuga
-      </h3>
-    </div>
 
-    <div class="osoba" data-aos="fade-up-right">
+      <a href="#" id="btn">O mnie</a>
+
       <img
-        src="https://cdn.discordapp.com/avatars/865177226596319253/4de98a651323f7fcb64fdfd6c1a0423d.png?size=4096"
-        alt="Profilowe"
+        src="https://drive.google.com/uc?id=1C4qCUaDw4MnuDV6ofE4pJHzxN-vUpbDw"
+        alt="rocks"
+        id="rocks"
       />
-      <h1>Słonik</h1>
-      <h3>Sędzia</h3>
-      <h3>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam est ut
-        possimus ipsam assumenda neque fuga
-      </h3>
-    </div>
 
-    <div class="info" data-aos="fade-up-left">
-      <h1>Nasi partnerzy</h1>
-      <h3>Partnerzy którzy nas promują</h3>
-    </div>
-
-    <div class="partnerzy" id="partnerzy" data-aos="fade-up-right">
       <img
-        src="https://cdn.discordapp.com/icons/922427751166787645/82ff7caf47874c3e2ea4ed5f6b39c59b.png?size=4096"
-        alt="logo ursynowa"
+        src="https://drive.google.com/uc?id=1BlnS76cnYYA-rvQBaTAaAngxsxSK7iC1"
+        alt="water"
+        id="water"
       />
-      <h1>vZTM Ursynów</h1>
-      <a href="https://discord.gg/8bttSVJdVV" target="_blank">Dołącz do nas!</a>
+    </section>
+    <div class="sec">
+      <h2>Cześć, nazywam się Szymon</h2>
+      <p>
+        <br /><br />Mam 13 lat, interesuję się programowaniem od około 2 lat.
+        Programuję w jezykach takich jak java script, java, python oraz html.
+        Pewnie mnie nie znasz, ale umięjetności jak na 13-sto latka mam lepsze
+        niż przeciętny nastolatek. <br /><br />
+      </p>
+      <h2>Formy kontaktu jakie oferuje</h2>
+      <p>
+      <div class="btns">
+        <br /><br /><a href="mailto:twojmail@domena.pl" target="_blank"
+          ></img>E-mail</a
+        >
+      </div>
+      <div class="btns">
+          <br /><br /><a href="mailto:twojmail@domena.pl" target="_blank"
+            >Discord</a
+          >
+        </div>
+      </p>
     </div>
+    <div class="loader"></div>
 
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-BWXN784PJN"
-    ></script>
+    <script src="script.js"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+      window.addEventListener("load", () => {
+        const loader = document.querySelector(".loader");
 
-      gtag("config", "G-BWXN784PJN");
-    </script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
-      AOS.init();
+        loader.classList.add("loader--hidden");
+
+        loader.addEventListener("transitionend", () => {
+          document.body.removeChild(loader);
+        });
+      });
     </script>
   </body>
 </html>
