--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           />
         </div>
         <div class="right-content" id="btn-des" data-aos="fade-up-left">
-          <a href="#" target="_blank">Discord</a>
+          <a href="https://discord.com/users/991282953961349160" target="_blank">Discord</a>
         </div>
       </div>
 
